# simple-pacman

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  configure.bat  configure.sh  map.txt  pacman.cpp  pacman.h
game/: pacman-game.cpp  pacman-game.h
lib/: INITME.sh
resources/: map.txt
shaders/: unlit.fs
shaders/ghost/: ghost.fs
shaders/pacman/: ghost.fs  map.fs
